--- a/static/css/signup.css
+++ b/static/css/signup.css
@@ -1,8 +1,3 @@
-.newsletter-signup {
-	--signup-padding: 60px;
-	padding: var(--signup-padding);
-}
-
 .newsletter-signup .asterisk {
 	color: #ff1111;
 }
